# pogodapp

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  prek.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: cities.py  climate_pipeline.py  climate_repository.py  config.py  heatmap.py  launcher.py  logging_config.py  main.py  run_local.py  runtime.py  score_service.py  scoring.py
frontend/static/: app.js  map-core.js  map-layers.js  map-probe.js  map-sidebar.js  map.js  styles.css
frontend/static/data/: landmark_cities.json  world.geojson  world_ocean.geojson
frontend/templates/: index.html
scripts/: build_climate_db.py
tests/: test_app_frontend.py  test_app_shell.py  test_cities.py  test_climate_pipeline.py  test_climate_repository.py  test_heatmap.py  test_launcher.py  test_logging_config.py  test_probe_frontend.py  test_runtime.py  test_score_service.py  test_scoring.py  test_smoke.py
