[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = ["backend", "data", "frontend", "tests", "README.md"]

[project]
name = "pogodapp"
version = "0.1.0"
description = "Climate Matcher scaffold"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "pillow>=11.2.1",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
pogodapp = "backend.run_local:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "imagecodecs>=2026.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "tifffile>=2026.3.3",
    "ty>=0.0.26",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",
  "D104",
  "D203",
  "D213",
  "COM812",
  "ISC001",
  "E501",
  "EM101",
  "EM102",
  "TRY003",
  "G004",
  "T201",
  "FBT",
  "TD",
  "FIX",
  "ERA001",
  "CPY001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "D"]
"__init__.py" = ["F401"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
